Fix bullet wrapping

--- a/src/stylesheets/blank.scss
+++ b/src/stylesheets/blank.scss
@@ -29,7 +29,7 @@ h2, h3 {
   font-weight: bold;
 }
 
-ul { list-style-position: inside; }
+ul { list-style-position: outside; padding: 0 0 0 1em; }
 
 #templateContent {
   background: $white;
